// .proto defines the RPC protocol format between client and server
syntax = "proto3";
option cc_generic_services = true;
import "google/protobuf/timestamp.proto";

// Server APIs
service GrpcServer
{
    // Task APIs
    rpc get_task_state (StringObj) returns (RpcTaskObj) {}
    rpc is_task_done (StringObj) returns (BooleanObj) {}
    rpc is_task_successful (StringObj) returns (BooleanObj) {}

    // Library manager APIs for library control
    rpc create_library (RpcLibInfoObj) returns (BooleanObj) {}
    rpc use_library (VoidObj) returns (BooleanObj) {}
    rpc demolish_library (RpcLibInfoObj) returns (BooleanObj) {}
    rpc make_library_ready (LibGetReadyParams) returns (StringObj) {}

    rpc get_current_lib_info (VoidObj) returns (RpcLibInfoObj) {}
    rpc get_library_list (VoidObj) returns (ListOfRpcLibInfoObj) {}
    rpc get_library_path_list (VoidObj) returns (ListOfStrings) {}
    rpc lib_exists (StringObj) returns (BooleanObj) {}

    // Document library APIs
    rpc query (DocLibQueryObj) returns (ListOfStrings) {}

    // Image library APIs
    rpc image_for_image_search (ImageLibQueryObj) returns (ListOfStrings) {}
    rpc text_for_image_search (ImageLibQueryObj) returns (ListOfStrings) {}
    rpc get_image_tags (ImageLibQueryObj) returns (ListOfStrings) {}

    // TODO: add manual incremental scan, file operation, etc.
    // ...
}

// Represents the empty message
message VoidObj
{ }

// Represents the summary info of a library object for creation or fetch
message RpcLibInfoObj {
    string name = 1;
    string uuid = 2;
    string path = 3;
    string type = 4;
}
message ListOfRpcLibInfoObj {
    repeated RpcLibInfoObj value = 1;
}

// Represents the params that the library is required to be ready
message LibGetReadyParams {
    string relative_path = 1;
    bool force_init = 2;
    string provider_type = 3;
}

// Represents the status of a submitted task
message RpcTaskObj {
    string id = 1;
    string state = 2;
    int32 phase_count = 3;
    string phase_name = 4;
    int32 current_phase = 5;
    int32 progress = 6;
    string error = 7;
    google.protobuf.Timestamp submitted_on = 8;
    google.protobuf.Timestamp completed_on = 9;
    int32 duration = 10;
}

// Represents the text query to a document library
message DocLibQueryObj {
    string text = 1;
    int32 top_k = 2;
    bool rerank = 3;
}

// Represents the text query to an image library
message ImageLibQueryObj {
    bytes image_data = 1;
    int32 top_k = 2;
    string text = 3;
}

// Object BooleanObj
message BooleanObj
{
    bool value = 1;
};

// Object StringObj
message StringObj
{
    string value = 1;
};
message ListOfStrings
{
    repeated string value = 1;
};
